appId: com.onboarding
---
- launchApp
- runFlow:
    when:
      visible: "Allow While Using App"
    commands:
        - tapOn: "Allow While Using App"
- tapOn:
    id: "card"
    index: 0
- assertVisible: "Pressure:.*"
- tapOn: "List"
- tapOn:
    id: "card"
    index: 1
- assertVisible: "Pressure:.*"